--- a/appdetails.json
+++ b/appdetails.json
@@ -16,6 +16,6 @@
     {"id":6, "app":"com.get.client"}
   ],
   "free":[
-    {"id":0, "file":0, "city":"Japan","country":"Japan","image":"unitedstates","ip":"219.100.37.199","active":"true","signal":"a"},
+    {"id":0, "file":0, "city":"Japan","country":"Japan","image":"japan","ip":"219.100.37.199","active":"true","signal":"a"},
   ]
 }
